[package]
name = "pallas-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dalek-ff-group = "0.1.5"
pasta_curves = { version = "0.4.1", git = "https://github.com/kayabaNerve/pasta_curves", branch = "fast_mul" }
k256 = "0.12"
